--- a/socs/esp_asic_generic/esp_defconfig
+++ b/socs/esp_asic_generic/esp_defconfig
@@ -7,7 +7,7 @@ CONFIG_COH_NOC_WIDTH = 64
 CONFIG_DMA_NOC_WIDTH = 64
 #CONFIG_MULTICAST_NOC_EN is not set
 CONFIG_MAX_MCAST_DESTS = 2
-CONGIG_QUEUE_SIZE = 4
+CONFIG_QUEUE_SIZE = 4
 CONFIG_CACHE_EN = y
 CONFIG_CACHE_RTL = y
 #CONFIG_CACHE_SPANDEX is not set
@@ -21,8 +21,8 @@ CONFIG_IOLINK_EN = y
 CONFIG_IOLINK_WIDTH = 16
 CONFIG_MEM_LINK_WIDTH = 64
 #CONFIG_SVGA_EN is not set
-CONGIG_DSU_IP = C0A80113
-CONGIG_DSU_ETH = A6A7A0F81440
+CONFIG_DSU_IP = C0A80113
+CONFIG_DSU_ETH = A6A7A0F81440
 CONFIG_CLK_STR = 0
 #CONFIG_MON_DDR is not set
 #CONFIG_MON_MEM is not set
